--- a/pages/servicio-empresarial.html
+++ b/pages/servicio-empresarial.html
@@ -490,7 +490,7 @@
             <!-- Campo -->
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                ><input type="text" />Nombre</label
+                >Nombre</label
               >
               <div class="relative">
                 <input
@@ -507,7 +507,7 @@
 
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                ><input type="email" />Correo electrónico</label
+                >Correo electrónico</label
               >
               <div class="relative">
                 <input
@@ -525,7 +525,7 @@
 
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                ><input type="number" />Teléfono</label
+                >Teléfono</label
               >
               <div class="relative">
                 <input
@@ -544,7 +544,7 @@
 
             <div class="relative">
               <label class="block text-sm font-semibold text-gray-800 mb-1"
-                ><input type="text" />Mensaje</label
+                >Mensaje</label
               >
               <div class="relative">
                 <textarea
