--- a/pages/servicio-empresarial.html
+++ b/pages/servicio-empresarial.html
@@ -449,7 +449,7 @@
             ← Volver a Inicio
           </a>
           <a
-            href="../pages/galeria.html"
+            href="../pages/verGaleria.html"
             class="inline-block bg-[#627eff] text-white py-2 px-6 rounded-lg shadow hover:bg-[#53c6e4] transition"
           >
             Ver la galería de nuestros servicios
