--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -192,7 +192,7 @@
         <img
           id="lightbox-imagen"
           src=""
-          alt="Imagen en pantalla completa"
+          alt="img pantalla completa"
           class="max-w-full max-h-full object-contain"
         />
         <button
