--- a/pages/verGaleria.html
+++ b/pages/verGaleria.html
@@ -316,7 +316,7 @@
         <img
           id="lightbox-imagen"
           src=""
-          alt="Imagen en pantalla completa"
+          alt="Img en pantalla completa"
           class="max-w-full max-h-full object-contain"
         />
         <button
