feat: implementar sistema seguro de testimonios con Netlify Functions
- Crear función serverless para ocultar URL del Google Sheets
- Reemplazar llamadas directas al CSV con endpoint seguro
- Mejorar seguridad ocultando credenciales del frontend

--- a/pages/servicio-empresarial.html
+++ b/pages/servicio-empresarial.html
@@ -36,6 +36,7 @@
         background-repeat: no-repeat;
         background-attachment: fixed;
         background-position: center center;
+        /* Cambiado a center center */
         color: #333;
       }
       :root {
@@ -52,6 +53,7 @@
 
       .bg-white {
         background-color: rgba(255, 255, 255, 0.8);
+        /* Blanco con 80% de opacidad */
       }
 
       .perspective {
@@ -72,6 +74,7 @@
 
       .overflow-y-auto::-webkit-scrollbar {
         display: none;
+        /* oculta scroll en caso de desborde */
       }
 
       html {
